Fix spacing/overlap issues

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -9,6 +9,8 @@ body {
 .sidebar {
   padding-top: 20px;
   margin-top: 48px;
+  min-height: 8em;
+  padding-left: 10px
 }
 
 [role="main"] {
